SUBDIRS = src motd-editor pixmaps po man

desktopdir = $(datadir)/applications
desktop_DATA = ggz-gnome.desktop motd-editor.desktop

schemadir = $(sysconfdir)/gconf/schemas/
schema_DATA = ggz-gnome.schemas

EXTRA_DIST = README.GGZ \
			indent.pro \
			m4/ggz.m4 \
			m4/iconv.m4 \
			$(desktop_DATA) \
			$(schema_DATA)
