## Process this file with automake to produce Makefile.in
# $Id: Makefile.am 8819 2007-01-04 23:38:21Z jdorje $

SUBDIRS = src motd-editor pixmaps po man

desktopdir = $(datadir)/applications
desktop_DATA = ggz-gnome.desktop motd-editor.desktop

schemadir = $(sysconfdir)/gconf/schemas/
schema_DATA = ggz-gnome.schemas

EXTRA_DIST = README.GGZ indent.pro

ACLOCAL_AMFLAGS = -I m4 -I m4/ggz
