## Process this file with automake to produce Makefile.in
# $Id: Makefile.am 8864 2007-01-08 13:50:22Z josef $

SUBDIRS = src motd-editor pixmaps po man

desktopdir = $(datadir)/applications
dist_desktop_DATA = ggz-gnome.desktop motd-editor.desktop

schemadir = $(sysconfdir)/gconf/schemas/
dist_schema_DATA = ggz-gnome.schemas

EXTRA_DIST = README.GGZ indent.pro

ACLOCAL_AMFLAGS = -I m4 -I m4/ggz
