dnl Process this file with autoconf to produce a configure script.
AC_INIT(ggz, 0.1, http://www.sf.net/projects/ggz/)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)

dnl Collect the require C flags and library linking flags.
PKG_CHECK_MODULES(GGZ, libgnomeui-2.0)
AC_SUBST(GGZ_CFLAGS)
AC_SUBST(GGZ_LIBS)

dnl In order to use a locally installed version of gettext.
GETTEXT_PACKAGE=ggz
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")

dnl Chewck for some standard items.
dnl AC_ISC_POSIX
dnl AC_PROG_CC
dnl AM_PROG_CC_STDC
dnl AC_HEADER_STDC

dnl Add the languages which your application supports here.
ALL_LINGUAS=""
AM_GNU_GETTEXT

dnl Set PACKAGE_LOCALE_DIR in config.h.
if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${ac_default_prefix}/${DATADIRNAME}/locale")
else
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${prefix}/${DATADIRNAME}/locale")
fi

dnl Check for the GGZ libraries
AC_GGZ_GGZCORE
AC_GGZ_LIBGGZ

dnl Setup the datadirecotry
ggzdatadir=`ggz-config --datadir`
AC_DEFINE_UNQUOTED(GGZDATADIR, "${ggzdatadir}")
AC_SUBST(ggzdatadir)


LDADD="$LDADD $LIB_GGZCORE $LIB_GGZ"

AC_SUBST(LDADD)

AC_OUTPUT([ m4/Makefile 
Makefile
pixmaps/Makefile
src/Makefile
po/Makefile.in
])

